libunival_CONFIG_INCLUDES=-I$(builddir)/config
libunival_INCLUDES=-I$(builddir) -I$(builddir)/obj $(BOOST_CPPFLAGS) univalue_escapes.h univalue.h 

EXTRA_LIBRARIES = libunival

dbb_cli_SOURCES = univalue.cpp univalue_read.cpp univalue_write.cpp
dbb_cli_CPPFLAGS = 
dbb_cli_CFLAGS = 
dbb_cli_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)

dbb_cli_LDADD = 
